--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -1,33 +1,77 @@
-%footer
-    %nav
-    .FooterMenu
-        .FooterMenu__list
-            %h2.FooterMenu__list__title Fmarketについて
-            %ul.FooterMenu__list_wrapper
-                %li.FooterMenu__list__small サービス詳細
-                %li.FooterMenu__list__small XXXXXX
-                / TwitterとFacebookアイコンはいらない？
-                -# %a.sc-jxGEyO.hbBsqD{href: "https://twitter.com/mercari_jp", target: "_blank"}
-                -#     %svg.sc-bRBYWo.sc-dEfkYy.bQXLvV{"aria-hidden" => "true", height: "16", viewbox: "0 0 21 16", width: "21"}
-                -#     %path{d: "M6.343 15.969c7.61 0 11.773-6.134 11.773-11.444 0-.172 0-.345-.008-.517a8.303 8.303 0 0 0 2.066-2.086 8.576 8.576 0 0 1-2.38.635A4.07 4.07 0 0 0 19.616.329a8.377 8.377 0 0 1-2.63.973 4.186 4.186 0 0 0-3.019-1.27c-2.283 0-4.14 1.803-4.14 4.023 0 .314.041.62.106.918A11.866 11.866 0 0 1 1.404.769a3.936 3.936 0 0 0-.557 2.023c0 1.396.735 2.628 1.84 3.35a4.278 4.278 0 0 1-1.872-.503v.055c0 1.945 1.428 3.577 3.317 3.945-.347.094-.71.141-1.09.141-.266 0-.524-.023-.774-.07.524 1.6 2.057 2.76 3.865 2.792a8.452 8.452 0 0 1-5.14 1.725 8.19 8.19 0 0 1-.985-.054 12.02 12.02 0 0 0 6.335 1.796", fill: "currentColor", "fill-rule" => "evenodd"}
-                -# %a.sc-jxGEyO.hbBsqD{href: "https://www.facebook.com/mercarijp", target: "_blank"}
-                -#     %svg.sc-kEYyzF.sc-gacfCG.hqOMdY{"aria-hidden" => "true", height: "16", viewbox: "0 0 16 16", width: "16"}
-                -#     %path{d: "M15.111 0H.89A.889.889 0 0 0 0 .889V15.11c0 .491.398.889.889.889h7.658V9.813H6.469V7.391h2.078V5.613c0-2.066 1.262-3.193 3.11-3.193.623-.002 1.244.03 1.863.096v2.15h-1.276c-1.002 0-1.197.478-1.197 1.178v1.543h2.397l-.31 2.422h-2.087V16h4.064c.491 0 .889-.398.889-.889V.89A.889.889 0 0 0 15.111 0z", fill: "currentColor", "fill-rule" => "evenodd"}
-            %ul
-        .FooterMenu__list
-            %h2.FooterMenu__list__title ヘルプ＆ガイド
-            %ul.FooterMenu__list_wrapper
-                %li.FooterMenu__list__small Fmarketガイド
-                %li.FooterMenu__list__small XXXXXX
-            %ul
-        .FooterMenu__list
-            %h2.FooterMenu__list__title プライバシーと利用規約
-            %ul.FooterMenu__list_wrapper
-                %li.FooterMenu__list__small プライバシーポリシー
-                %li.FooterMenu__list__small XXXXXX
-            %ul
-    %nav
-        .FooterBottom
-            .FooterBottom__menu
-                %img.footer-logo{alt: "Fmarket", src: "fmarket_logo_red.svg"}
-                %span.footer-text © 2019 Fmarket
+%body
+    %header
+        .HeaderTop
+            %div
+                %img.header-logo{alt: "Fmarket", src: "assets/images/fmarket_logo_red.svg"}/
+            %div
+                %form.sc-kjoXOD.jhhfpc{action: "/jp/search/"}
+                %input.sc-cHGsZl.uBYjF{name: "keyword", placeholder: "何かお探しですか？", type: "search", value: ""}/
+                %button.sc-TOsTZ.eEWgtr
+        .HeaderBottom
+            .HeaderBottom__Left
+                .HeaderBottom__Left__category_search
+                    %a.sc-eqIVtm.jreoh{href: "/jp/category/"}
+                    %svg.sc-cvbbAY.sc-fAjcbJ.dKBFhm{"aria-hidden" => "true", height: "16", viewbox: "0 0 20 16", width: "20"}>
+                        %path{d: "M18.799 15.25h-11.5a1.25 1.25 0 1 1 0-2.5h11.5a1.25 1.25 0 0 1 0 2.5zm0-6h-11.5a1.25 1.25 0 1 1 0-2.5h11.5a1.25 1.25 0 0 1 0 2.5zm0-6h-11.5a1.25 1.25 0 1 1 0-2.5h11.5a1.25 1.25 0 0 1 0 2.5zM2 16a2 2 0 1 0 0-4 2 2 0 0 0 0 4zm0-6a2 2 0 1 0 0-4 2 2 0 0 0 0 4zm0-6a2 2 0 1 0 0-4 2 2 0 0 0 0 4z", fill: "currentColor", "fill-rule" => "nonzero"}
+                    カテゴリーから探す
+                .HeaderBottom__Left__brand-search
+                    %a.sc-eqIVtm.jreoh{href: "/jp/brand/"}
+                    %svg.sc-csuQGl.sc-caSCKo.kspmux{"aria-hidden" => "true", height: "16", viewbox: "0 0 23 16", width: "23"}>
+                        %path{d: "M6.315 0L4.473 1.806 2.833.019.73 1.977l1.69 1.84L1.198 5.02c-1.594 1.594-1.594 4.188-.01 5.772L6.3 16h13.272a3.08 3.08 0 0 0 3.077-3.077V3.076A3.08 3.08 0 0 0 19.57 0H6.315zm13.46 12.925a.211.211 0 0 1-.205.205H7.504L3.227 8.771a1.226 1.226 0 0 1-.01-1.71L4.38 5.92l1.28 1.371a2.68 2.68 0 1 0 2.13-1.93L6.433 3.907 7.49 2.87h12.082a.211.211 0 0 1 .206.205v9.848h-.002z", fill: "currentColor", "fill-rule" => "nonzero"}
+                    ブランドから探す
+            %ul.HeaderBottom_Right
+                %li
+                %a.sc-RefOD.jwHbWf{href: "/jp/mypage/like/history/"}
+                    いいね！一覧
+                %li
+                %a.sc-RefOD.jwHbWf{href: "/jp/mypage/notification/"}
+                    お知らせ
+                %li
+                %a.sc-RefOD.jwHbWf{href: "/jp/mypage/todo/"}
+                    やることリスト
+                %li
+                %a.sc-RefOD.jwHbWf{href: "/jp/mypage/"}
+                    %img.profile-photo{alt: "", src: ""}>/
+                    マイページ
+    .slide-menu
+    %main
+        .favorite-items
+        .category-lists
+        .category-items
+        .brand-lists
+        .brand-items
+    %aside
+
+    %footer
+        %nav
+        .FooterMenu
+            .FooterMenu__list
+                %h2.FooterMenu__list__title Fmarketについて
+                %ul.FooterMenu__list_wrapper
+                    %li.FooterMenu__list__small サービス詳細
+                    %li.FooterMenu__list__small XXXXXX
+                    / TwitterとFacebookアイコンはいらない？
+                    -# %a.sc-jxGEyO.hbBsqD{href: "https://twitter.com/mercari_jp", target: "_blank"}
+                    -#     %svg.sc-bRBYWo.sc-dEfkYy.bQXLvV{"aria-hidden" => "true", height: "16", viewbox: "0 0 21 16", width: "21"}
+                    -#     %path{d: "M6.343 15.969c7.61 0 11.773-6.134 11.773-11.444 0-.172 0-.345-.008-.517a8.303 8.303 0 0 0 2.066-2.086 8.576 8.576 0 0 1-2.38.635A4.07 4.07 0 0 0 19.616.329a8.377 8.377 0 0 1-2.63.973 4.186 4.186 0 0 0-3.019-1.27c-2.283 0-4.14 1.803-4.14 4.023 0 .314.041.62.106.918A11.866 11.866 0 0 1 1.404.769a3.936 3.936 0 0 0-.557 2.023c0 1.396.735 2.628 1.84 3.35a4.278 4.278 0 0 1-1.872-.503v.055c0 1.945 1.428 3.577 3.317 3.945-.347.094-.71.141-1.09.141-.266 0-.524-.023-.774-.07.524 1.6 2.057 2.76 3.865 2.792a8.452 8.452 0 0 1-5.14 1.725 8.19 8.19 0 0 1-.985-.054 12.02 12.02 0 0 0 6.335 1.796", fill: "currentColor", "fill-rule" => "evenodd"}
+                    -# %a.sc-jxGEyO.hbBsqD{href: "https://www.facebook.com/mercarijp", target: "_blank"}
+                    -#     %svg.sc-kEYyzF.sc-gacfCG.hqOMdY{"aria-hidden" => "true", height: "16", viewbox: "0 0 16 16", width: "16"}
+                    -#     %path{d: "M15.111 0H.89A.889.889 0 0 0 0 .889V15.11c0 .491.398.889.889.889h7.658V9.813H6.469V7.391h2.078V5.613c0-2.066 1.262-3.193 3.11-3.193.623-.002 1.244.03 1.863.096v2.15h-1.276c-1.002 0-1.197.478-1.197 1.178v1.543h2.397l-.31 2.422h-2.087V16h4.064c.491 0 .889-.398.889-.889V.89A.889.889 0 0 0 15.111 0z", fill: "currentColor", "fill-rule" => "evenodd"}
+                %ul
+            .FooterMenu__list
+                %h2.FooterMenu__list__title ヘルプ＆ガイド
+                %ul.FooterMenu__list_wrapper
+                    %li.FooterMenu__list__small Fmarketガイド
+                    %li.FooterMenu__list__small XXXXXX
+                %ul
+            .FooterMenu__list
+                %h2.FooterMenu__list__title プライバシーと利用規約
+                %ul.FooterMenu__list_wrapper
+                    %li.FooterMenu__list__small プライバシーポリシー
+                    %li.FooterMenu__list__small XXXXXX
+                %ul
+        %nav
+            .FooterBottom
+                .FooterBottom__menu
+                    %img.footer-logo{alt: "Fmarket", src: "fmarket_logo_red.svg"}
+                    %span.footer-text © 2019 Fmarket
