--- a/app/assets/stylesheets/homes/home.scss
+++ b/app/assets/stylesheets/homes/home.scss
@@ -34,7 +34,23 @@ header{
     &__header-search{
       height: 40px;
       width: 841px;
-      padding: 0, 50px, 0, 10px;
+      padding: 8px, 50px, 0, 10px;
+
+      background-color: rgb(245, 245, 245);
+      font-size: 16px;
+      height: 40px;
+      line-height: 1.4em;
+      position: relative;
+      // width: 100%;
+      -webkit-appearance: none;
+      border-width: 1px;
+      border-style: solid;
+      border-color: rgb(204, 204, 204);
+      border-image: initial;
+      border-radius: 4px;
+      outline: none;
+      padding: 0px 50px 0px 10px;
+      transition: all 0.3s ease-out 0s;
 
     }
 
@@ -52,31 +68,37 @@ header{
     margin-top: 8px;
 
     &__Left{
-      &__category_search{
 
-      }
-      &__brand-search{
+      &__genre_search{
+        display: block;
+        font-size: 14px;
+        font-weight: 600;
+        line-height: 36px;
+        white-space: nowrap;
 
       }
 
     }
   
     &__Right{
-      &__favorite{
 
-      }
-      &__notification{
-
-      }
-      &__todo{
-
-      }
-      &__mypage{
+      &__Menu{
+        -webkit-box-align: center;
+        align-items: center;
+        display: flex;
+        font-size: 14px;
+        height: 32px;
+        transform: scale(1);
+        transition: all 0.3s ease-out 0s;
 
       }
 
     }
 
+}
+
+input{
+  font-family: inherit;
 }
 
 
