--- a/app/views/signups/step2.html.haml
+++ b/app/views/signups/step2.html.haml
@@ -1,2 +1,28 @@
-%h1 Signups#step2
-%p Find me in app/views/signups/step2.html.haml
+%header.single-header
+  %h1
+    %a 画像リンク
+  %nav.progress-bar_signup-bar
+    %ol.clearfix
+      %li headerのバー
+%main.single-main
+  %section.l-single-container
+    %h2.l-single-inner_registration
+      電話番号の確認
+    = form_for @user, url: step2_signups_path, method: :post do |f|
+      .user_phonenumber
+        .field
+          .number_presentment
+            = f.label :"携帯電話の番号"
+          - if @user.errors.messages[:phonenumber].any?
+            .number_input
+            = f.text_field :phonenumber, class: "number_text_error", id: 'phonenumber_error', placeholder: '携帯電話の番号を入力'
+            = render 'shard/signups_errors', errors: @user.errors.full_messages_for(:phonenumber)
+          - else
+            .number_input
+              = f.text_field :phonenumber, class: "number_text", id: 'phonenumber', placeholder: '携帯電話の番号を入力'
+          %p.number_message 本人確認のため、携帯電話のSMS(ショートメッセージサービス)を利用して認証を行います。
+        .next_btn
+          = f.submit :"次へ進む", class: "next_submit"
+        %p.number_explanation ※電話番号は本人確認や不正利用防止のために利用します。他のユーザーに公開されることはありません。
+%footer
+  フッター
