--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -1,12 +1,26 @@
 %body
     %header
         .HeaderTop
-            .HeaderTop__header-logo
-                %img{alt: "Fmarket", src: "assets/images/fmarket_logo_red.svg"}/
-            .HeaderTop__header-search
-                %form{action: "/jp/search/"}
-                %input{name: "keyword", placeholder: "何かお探しですか？", type: "search", value: ""}/
-                %button.search-logo
+            .HeaderTop__Menu
+                .HeaderTop__Menu__header-logo
+                    %svg.header-logo{viewbox: "0 0 281.19 84.08", xmlns: "http://www.w3.org/2000/svg"}
+                        %defs
+                            :css
+                                .cls-1{fill:#dc4912;stroke:#fff;stroke-miterlimit:10;}.cls-2{font-size:48px;fill:#231815;font-family:YuGo-Bold-83pv-RKSJ-H, YuGothic;}
+                        %title アセット 3
+                        %g{"data-name" => "レイヤー 2", id: "レイヤー_2"}
+                            %g{"data-name" => "レイヤー 1", id: "レイヤー_1-2"}
+                            %polygon.cls-1{points: "36.41 83.5 0.5 62.77 0.5 21.31 36.41 0.58 72.32 21.31 72.32 62.77 36.41 83.5"}
+                            %polyline.cls-1{points: "0.5 21.31 36.41 42.04 72.32 21.31"}
+                            %polyline.cls-1{points: "36.41 83.5 36.41 49.36 36.41 42.04"}
+                            %line.cls-1{x1: "36.41", x2: "0.5", y1: "52.41", y2: "31.67"}
+                            %line.cls-1{x1: "72.32", x2: "36.41", y1: "33.2", y2: "50.88"}
+                            %text.cls-2{transform: "translate(86.41 62.77)"} Fmarket
+                        -# %svg.header-logo{alt: "Fmarket", src: "assets/images/fmarket_logo_red.svg"}/
+                        .HeaderTop__Menu__header-search
+                            %form.search{action: "/jp/search/"}
+                            %input.search{name: "keyword", placeholder: "何かお探しですか？", type: "search", value: ""}/
+                            %button.search-logo
         .HeaderBottom
             .HeaderBottom__Left
                 .HeaderBottom__Left__genre_search
@@ -21,18 +35,14 @@
                     ブランドから探す
             .HeaderBottom__Right
                 .HeaderBottom__Right__Menu
-                = link_to 'いいね一覧画面', XXX_XXX_path, data: { confirm: '画面を離れてよろしいですか？' }
+                = link_to 'いいね一覧画面', data: { confirm: '画面を離れてよろしいですか？' } do
                     いいね！一覧
                 .HeaderBottom__Right__Menu
-                = link_to 'いいね一覧画面', XXX_XXX_path, data: { confirm: '画面を離れてよろしいですか？' }
+                = link_to 'いいね一覧画面', data: { confirm: '画面を離れてよろしいですか？' } do
                     お知らせ
                 .HeaderBottom__Right__Menu
-                = link_to 'いいね一覧画面', XXX_XXX_path, data: { confirm: '画面を離れてよろしいですか？' }
-
-                -# .HeaderBottom__Right__Menu
-                -# = link_to 'いいね一覧画面', XXX_XXX_path, data: { confirm: '画面を離れてよろしいですか？' }
-                -# -# %img.profile-photo{alt: "プロフィール写真", src: ""}>/
-                -#      Mypage
+                = link_to 'いいね一覧画面', data: { confirm: '画面を離れてよろしいですか？' } do
+                    Mypage
 
     .Slide-menu
         スライドしょーだお
@@ -41,57 +51,57 @@
     %main
         .MainMenu
             .MainMenu__FavoriteItems
-            いいね！した商品
+                いいね！した商品
             .MainMenu__CategoryLists
-            人気のカテゴリー
+                人気のカテゴリー
             .MainMenu__CategoryItems
-            XXXカテゴリー新着アイテム
+                XXXカテゴリー新着アイテム
             .MainMenu__BrandLists
-            人気のブランド
+                人気のブランド
             .MainMenu__BrandItems
-            XXXブランド新着アイテム
+                XXXブランド新着アイテム
 
     %aside
 
     %footer
         %nav
-        .FooterMenu
-            .FooterMenu__list
-                %h2.FooterMenu__list__title Fmarketについて
-                %ul.FooterMenu__list_wrapper
-                    %li.FooterMenu__list__small サービス詳細
-                    %li.FooterMenu__list__small XXXXXX
-                    / TwitterとFacebookアイコンはいらない？
-                    -# %a.sc-jxGEyO.hbBsqD{href: "https://twitter.com/mercari_jp", target: "_blank"}
-                    -#     %svg.sc-bRBYWo.sc-dEfkYy.bQXLvV{"aria-hidden" => "true", height: "16", viewbox: "0 0 21 16", width: "21"}
-                    -#     %path{d: "M6.343 15.969c7.61 0 11.773-6.134 11.773-11.444 0-.172 0-.345-.008-.517a8.303 8.303 0 0 0 2.066-2.086 8.576 8.576 0 0 1-2.38.635A4.07 4.07 0 0 0 19.616.329a8.377 8.377 0 0 1-2.63.973 4.186 4.186 0 0 0-3.019-1.27c-2.283 0-4.14 1.803-4.14 4.023 0 .314.041.62.106.918A11.866 11.866 0 0 1 1.404.769a3.936 3.936 0 0 0-.557 2.023c0 1.396.735 2.628 1.84 3.35a4.278 4.278 0 0 1-1.872-.503v.055c0 1.945 1.428 3.577 3.317 3.945-.347.094-.71.141-1.09.141-.266 0-.524-.023-.774-.07.524 1.6 2.057 2.76 3.865 2.792a8.452 8.452 0 0 1-5.14 1.725 8.19 8.19 0 0 1-.985-.054 12.02 12.02 0 0 0 6.335 1.796", fill: "currentColor", "fill-rule" => "evenodd"}
-                    -# %a.sc-jxGEyO.hbBsqD{href: "https://www.facebook.com/mercarijp", target: "_blank"}
-                    -#     %svg.sc-kEYyzF.sc-gacfCG.hqOMdY{"aria-hidden" => "true", height: "16", viewbox: "0 0 16 16", width: "16"}
-                    -#     %path{d: "M15.111 0H.89A.889.889 0 0 0 0 .889V15.11c0 .491.398.889.889.889h7.658V9.813H6.469V7.391h2.078V5.613c0-2.066 1.262-3.193 3.11-3.193.623-.002 1.244.03 1.863.096v2.15h-1.276c-1.002 0-1.197.478-1.197 1.178v1.543h2.397l-.31 2.422h-2.087V16h4.064c.491 0 .889-.398.889-.889V.89A.889.889 0 0 0 15.111 0z", fill: "currentColor", "fill-rule" => "evenodd"}
-            
-            .FooterMenu__list
-                %h2.FooterMenu__list__title ヘルプ＆ガイド
-                %ul
-                    %li.FooterMenu__list__small 
-                        Fmarketガイド
-                    %li.FooterMenu__list__small
-                        XXXXXX
+            .FooterMenu
+                .FooterMenu__list
+                    %h2.FooterMenu__list__title Fmarketについて
+                    %ul.FooterMenu__list_wrapper
+                        %li.FooterMenu__list__small サービス詳細
+                        %li.FooterMenu__list__small XXXXXX
+                        / TwitterとFacebookアイコンはいらない？
+                        -# %a.sc-jxGEyO.hbBsqD{href: "https://twitter.com/mercari_jp", target: "_blank"}
+                        -#     %svg.sc-bRBYWo.sc-dEfkYy.bQXLvV{"aria-hidden" => "true", height: "16", viewbox: "0 0 21 16", width: "21"}
+                        -#     %path{d: "M6.343 15.969c7.61 0 11.773-6.134 11.773-11.444 0-.172 0-.345-.008-.517a8.303 8.303 0 0 0 2.066-2.086 8.576 8.576 0 0 1-2.38.635A4.07 4.07 0 0 0 19.616.329a8.377 8.377 0 0 1-2.63.973 4.186 4.186 0 0 0-3.019-1.27c-2.283 0-4.14 1.803-4.14 4.023 0 .314.041.62.106.918A11.866 11.866 0 0 1 1.404.769a3.936 3.936 0 0 0-.557 2.023c0 1.396.735 2.628 1.84 3.35a4.278 4.278 0 0 1-1.872-.503v.055c0 1.945 1.428 3.577 3.317 3.945-.347.094-.71.141-1.09.141-.266 0-.524-.023-.774-.07.524 1.6 2.057 2.76 3.865 2.792a8.452 8.452 0 0 1-5.14 1.725 8.19 8.19 0 0 1-.985-.054 12.02 12.02 0 0 0 6.335 1.796", fill: "currentColor", "fill-rule" => "evenodd"}
+                        -# %a.sc-jxGEyO.hbBsqD{href: "https://www.facebook.com/mercarijp", target: "_blank"}
+                        -#     %svg.sc-kEYyzF.sc-gacfCG.hqOMdY{"aria-hidden" => "true", height: "16", viewbox: "0 0 16 16", width: "16"}
+                        -#     %path{d: "M15.111 0H.89A.889.889 0 0 0 0 .889V15.11c0 .491.398.889.889.889h7.658V9.813H6.469V7.391h2.078V5.613c0-2.066 1.262-3.193 3.11-3.193.623-.002 1.244.03 1.863.096v2.15h-1.276c-1.002 0-1.197.478-1.197 1.178v1.543h2.397l-.31 2.422h-2.087V16h4.064c.491 0 .889-.398.889-.889V.89A.889.889 0 0 0 15.111 0z", fill: "currentColor", "fill-rule" => "evenodd"}
+                
+                .FooterMenu__list
+                    %h2.FooterMenu__list__title ヘルプ＆ガイド
+                    %ul
+                        %li.FooterMenu__list__small 
+                            Fmarketガイド
+                        %li.FooterMenu__list__small
+                            XXXXXX
 
-            .FooterMenu__list
-                %h2.FooterMenu__list__title プライバシーと利用規約
-                %ul
-                    %li.FooterMenu__list__small 
-                        プライバシーポリシー
-                    %li.FooterMenu__list__small
-                        XXXXXX
+                .FooterMenu__list
+                    %h2.FooterMenu__list__title プライバシーと利用規約
+                    %ul
+                        %li.FooterMenu__list__small 
+                            プライバシーポリシー
+                        %li.FooterMenu__list__small
+                            XXXXXX
 
-            .FooterBottom
-                .FooterBottom__menu
-                    %img.footer-logo{alt: "Fmarket", src: "fmarket_logo_red.svg"}
-                    %span.footer-text 
-                        © 2019 Fmarket
+                .FooterBottom
+                    .FooterBottom__menu
+                        %img.footer-logo{alt: "Fmarket", src: "app/assets/images/d12185-9-389300-0.jpg"}
+                        %span.footer-text 
+                            © 2019 Fmarket
 
     .PostItems
-    = link_to '出品画面', new_post_path, data: { confirm: '画面を離れてよろしいですか？' }
-        .PostItems__Button
-            出品
+        = link_to '出品画面', data: { confirm: '画面を離れてよろしいですか？' } do
+            .PostItems__Button
+                出品
